--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   <div id="board"></div>
   <p id="message"></p>
 
+  <h2>Your Board</h2>
+  <div id="player-board"></div>
+
+  <h2>Enemy Board</h2>
+  <div id="computer-board"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
