Update background music source file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
   <!-- Background Music -->
   <audio id="bgMusic" loop preload="auto">
-    <source src="SnowMusicStudio_-_Epic_Battleship_Soundtrack.mp3" type="audio/mpeg">
+    <source src="soundtrack.mp3" type="audio/mpeg">
   </audio>
 
   <div id="root"></div>
